# Fake-account

./: .codecov.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Proposed_Model_Fake_Account_Detection.docx  README.md  lang_map.json  predict_eval_threshold.py  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: api.py  app.py
config/: config.yaml
data/: labeled_dataset_new.csv  processed_features.csv
docs/: API.md  Chapter_4_Results_and_Evaluation.md  generate_presentation_pdf.py
models/: randomforest_best_model.joblib  randomforest_pipeline.joblib
notebooks/: FakeAccount.ipynb  mycode.ipynb  randomforest_preprocessing.ipynb
scripts/: compare_models.py  generate_evaluation_plots.py  predict_eval_local.py  run_inference.py  test_full_pipeline.py  test_inference.py  test_train_script.py
src/: __init__.py  feature_engineer.py  schemas.py  train.py  visualize.py
src/UNKNOWN.egg-info/: SOURCES.txt
src/fake_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_feature_engineer.py  test_integration.py  test_model.py
