[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_detector"     
version = "0.1.0"
description = "Twitter fake vs genuine account detector"
authors = [{name = "Ramez Fawzy"}]
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "streamlit",
    "joblib",
    "gender-guesser"
]
